# dimice-heat-pidomus

./: CMakeLists.txt  README.md
include/: extended_field_function.h  extrapolated_field.h  extrapolated_field_function.h  grids.h  heat_problem.hpp  log.hpp  poisson_problem.h
include/interfaces/: poisson_problem_signals.h
inputs/: cylinder.prm  default.prm  poisson_problem_01.prm  sphere-cylinder.prm  sphere-cylinder_moved.prm  sphere.prm
source/: grids.cpp  heat_problem.cpp  main.cc  main.cpp  my_grids.cpp  my_grids.h  python_wrapper.cpp
tests/: CMakeLists.txt  test_tools.cpp  test_tools.h  tests.cpp
